todo update for 03/07/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -28,8 +28,18 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 
 ### () - TUE 03/07/2023
 * () edit: threejs-vector3-normalize - proof read opening and getting started
-* () forpost: threejs-mesh-copy - start new loop section
-* () videoground-blog-posts: make a video2 for threejs-mesh-copy
+* (done) forpost: threejs-vector3-normalize - rename folders
+* (done) forpost: threejs-vector3-normalize - update basic examples to r146 style
+* () forpost: threejs-vector3-normalize - new basic example
+* () edit: threejs-vector3-normalize - proof read / expand basic section
+
+* () forpost: threejs-vector3-normalize - update other sections to r146 style
+* () edit: threejs-vector3-normalize - proof read other sections and conclusion
+
+* () videoground-blog-posts: video2 for threejs-vector3-normalize based on sphere demo
+
+* () work on videoground r7
+
 * () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 * () start a new r146 prototype that has to do with having a timeline.
 
@@ -40,9 +50,7 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) videoground-blog-posts: make video1 for threejs-examples-breath-module
 * (done) forpost: threejs-mesh-copy - start new children section
 * (done) start a new r146 prototype that is a collection of alpha methods called alpha-utils.js
-
-* () videoground-beta-world: start video5 for breathing basic
-* () work on videoground r7
+* (done) videoground-beta-world: start video5 for breathing basic
 
 ### () - SUN 03/05/2023
 * (done) videoground-beta-world : work on video4 for breathing-basic
