todo update for 03/07/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -27,16 +27,13 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () edit: threejs-vector3-clamp
 
 ### () - TUE 03/07/2023
-* () edit: threejs-vector3-normalize - proof read opening and getting started
+* (done) edit: threejs-vector3-normalize - proof read opening and getting started
 * (done) forpost: threejs-vector3-normalize - rename folders
 * (done) forpost: threejs-vector3-normalize - update basic examples to r146 style
-* () forpost: threejs-vector3-normalize - new basic example
-* () edit: threejs-vector3-normalize - proof read / expand basic section
-
-* () forpost: threejs-vector3-normalize - update other sections to r146 style
-* () edit: threejs-vector3-normalize - proof read other sections and conclusion
-
-* () videoground-blog-posts: video2 for threejs-vector3-normalize based on sphere demo
+* (done) forpost: threejs-vector3-normalize - new basic example
+* (done) edit: threejs-vector3-normalize - proof read / expand basic section
+* (done) forpost: threejs-vector3-normalize - update other sections to r146 style
+* (done) videoground-blog-posts: video2 for threejs-vector3-normalize based on sphere demo
 
 * () work on videoground r7
 
