todo update for 03/08/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -22,9 +22,12 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 
 ### () - THU 03/09/2023
 * () edit: threejs-vector3-wrap
+* () videoground r7 - asterisk in title when there are unsaved changes
+* () videoground r7 - readme and final 0.7.0 commit
 
 ### () - WED 03/08/2023
 * () edit: threejs-vector3-clamp
+* () videoground r7 - LF to CRLF EOL conversion on save
 
 ### () - TUE 03/07/2023
 * (done) edit: threejs-vector3-normalize - proof read opening and getting started
@@ -34,11 +37,10 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) edit: threejs-vector3-normalize - proof read / expand basic section
 * (done) forpost: threejs-vector3-normalize - update other sections to r146 style
 * (done) videoground-blog-posts: video2 for threejs-vector3-normalize based on sphere demo
+* (done) videoground r7 - make 720p the default
 
-* () work on videoground r7
-
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 * () start a new r146 prototype that has to do with having a timeline.
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
 
 ### () - MON 03/06/2023
 * (done) edit: threejs-mesh-copy - proof read opening and getting started
