--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -17,7 +17,7 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 ### () - SAT 03/11/2023
 
 ### () - FRI 03/10/2023
-* () start post #1031 on threejs-
+* () start post #1031 on threejs-examples-camera-planes
 * () edit: threejs-vector3-distance-to
 
 ### () - THU 03/09/2023
@@ -26,8 +26,20 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () videoground r7 - readme and final 0.7.0 commit
 
 ### () - WED 03/08/2023
-* () edit: threejs-vector3-clamp
+* () forpost: threejs-vector3-clamp - rename folders
+* () forpost: threejs-vector3-clamp - update basic section
+* () edit: threejs-vector3-clamp - proof read opening and getting started
+* () edit: threejs-vector3-clamp - proof read basic section
+
 * () videoground r7 - LF to CRLF EOL conversion on save
+
+* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+
+* () r146 prototype: examples-camera-planes - finish up the prototype
+* () forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
+
+* () r146 prototype: examples-alpha-module -
+* () r146 prototype: examples-timeline -
 
 ### () - TUE 03/07/2023
 * (done) edit: threejs-vector3-normalize - proof read opening and getting started
@@ -38,9 +50,7 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) forpost: threejs-vector3-normalize - update other sections to r146 style
 * (done) videoground-blog-posts: video2 for threejs-vector3-normalize based on sphere demo
 * (done) videoground r7 - make 720p the default
-
-* () start a new r146 prototype that has to do with having a timeline.
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+* (done) start a new r146 prototype that has to do with having a timeline.
 
 ### () - MON 03/06/2023
 * (done) edit: threejs-mesh-copy - proof read opening and getting started
