--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -26,10 +26,17 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () videoground r7 - readme and final 0.7.0 commit
 
 ### () - WED 03/08/2023
-* () forpost: threejs-vector3-clamp - rename folders
-* () forpost: threejs-vector3-clamp - update basic section
-* () edit: threejs-vector3-clamp - proof read opening and getting started
-* () edit: threejs-vector3-clamp - proof read basic section
+* (done) forpost: threejs-vector3-clamp - rename folders
+* (done) forpost: threejs-vector3-clamp - update basic section
+* (done) edit: threejs-vector3-clamp - proof read opening and getting started
+* (done) edit: threejs-vector3-clamp - proof read basic section
+* (done) forpost: threejs-vector3-clamp - update and expand wrap section
+* (done) edit: threejs-vector3-clamp - update wrap section
+
+* () forpost: threejs-vector3-clamp - update loop section examples to r146 style
+* () forpost: threejs-vector3-clamp - new loop example
+* () videoground-blog-posts - video2 for threejs-vector3-clamp
+* () edit: threejs-vector3-clamp - edit and expand loop section
 
 * () videoground r7 - LF to CRLF EOL conversion on save
 
