--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -32,11 +32,10 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) edit: threejs-vector3-clamp - proof read basic section
 * (done) forpost: threejs-vector3-clamp - update and expand wrap section
 * (done) edit: threejs-vector3-clamp - update wrap section
-
-* () forpost: threejs-vector3-clamp - update loop section examples to r146 style
-* () forpost: threejs-vector3-clamp - new loop example
-* () videoground-blog-posts - video2 for threejs-vector3-clamp
-* () edit: threejs-vector3-clamp - edit and expand loop section
+* (done) forpost: threejs-vector3-clamp - update loop section examples to r146 style
+* (done) forpost: threejs-vector3-clamp - new loop example
+* (done) videoground-blog-posts - video2 for threejs-vector3-clamp
+* (done) edit: threejs-vector3-clamp - edit and expand loop section
 
 * () videoground r7 - LF to CRLF EOL conversion on save
 
