todo update for 03/08/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -8,6 +8,15 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () update youtube github video links from threejs-ambient-light
 
 <!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 03/12/2023 - SAT 03/18/2023
+
+### () - SUN 03/12/2023
+* () r146 prototype: examples-alpha-module -
+* () r146 prototype: examples-timeline -
+
+<!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 2 - SUN 03/05/2023 - SAT 03/11/2023
@@ -44,8 +53,7 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () r146 prototype: examples-camera-planes - finish up the prototype
 * () forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
 
-* () r146 prototype: examples-alpha-module -
-* () r146 prototype: examples-timeline -
+
 
 ### () - TUE 03/07/2023
 * (done) edit: threejs-vector3-normalize - proof read opening and getting started
