todo update for 03/08

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -45,10 +45,8 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) forpost: threejs-vector3-clamp - new loop example
 * (done) videoground-blog-posts - video2 for threejs-vector3-clamp
 * (done) edit: threejs-vector3-clamp - edit and expand loop section
-
-* () videoground r7 - LF to CRLF EOL conversion on save
-
-* () forpost: threejs-examples-tracks - work on more r0 examples, write down any notes for r1 if anything comes up
+* (done) videoground r7 - LF to CRLF EOL conversion on save
+* (done) forpost: threejs-examples-tracks - start work on r1
 
 * () r146 prototype: examples-camera-planes - finish up the prototype
 * () forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
