todo update for 03/09/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -12,7 +12,12 @@ I would like to focus on my beta world content first and formost. When doing so 
 ---------- --------->
 ## () - WEEK 3 - SUN 03/12/2023 - SAT 03/18/2023
 
+This week I would like to work on my tracks module. I think it will be a pretty cool project if I can just improve the quality of the code a little. So I will be making that the top item each day this week, and maybe event for the rest of the month if need be. After that I have some ideas for protoypes that might apply to what I want to do with tracks, as well as other future projects.
+
 ### () - SUN 03/12/2023
+<!-- forpost/ tracks r1 and demos -->
+* () forpost: threejs-examples-tracks - work on R1 of the module.
+
 * () r146 prototype: examples-alpha-module -
 * () r146 prototype: examples-timeline -
 
@@ -24,15 +29,28 @@ I would like to focus on my beta world content first and formost. When doing so 
 I would like to finish 'breathing basic' and while doing so start some prototypes for projects that I will be using with this video as well as future projects based off of it. I have two general ideas for additional threes example projects one has to do with having one or more planes positioned in front of the camera, and the other has to do with alpha values. I currently have alpha methods baked into my curve and sequence hook modules, but I think that I should just have these in there own module and remove this from future revisions of those projects.
 
 ### () - SAT 03/11/2023
+* () videoground r7 - asterisk in title when there are unsaved changes
+* () videoground r7 - readme and final 0.7.0 commit
 
 ### () - FRI 03/10/2023
 * () start post #1031 on threejs-examples-camera-planes
 * () edit: threejs-vector3-distance-to
 
 ### () - THU 03/09/2023
-* () edit: threejs-vector3-wrap
-* () videoground r7 - asterisk in title when there are unsaved changes
-* () videoground r7 - readme and final 0.7.0 commit
+<!-- forpost/edit -->
+* () forpost: threejs-vector3-wrap - rename folders
+* () forpost: threejs-vector3-wrap - update to r146 style
+* () forpost: threejs-vector3-wrap - new loop section example
+* () videoground-blog-posts: have a video2 for threejs-vector3-wrap 
+* () edit: threejs-vector3-wrap - proof read opening and getting started
+* () edit: threejs-vector3-wrap - update all code examples to current r146 style
+* () edit: threejs-vector3-wrap - expand loop section with new demo
+* () edit: threejs-vector3-wrap - embed video2
+<!-- forpost/new -->
+* () r146 prototype: examples-camera-planes - finish up the prototype
+* () forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
+<!-- TRACKS -->
+* () forpost: threejs-examples-tracks - work on r1
 
 ### () - WED 03/08/2023
 * (done) forpost: threejs-vector3-clamp - rename folders
@@ -47,11 +65,6 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) edit: threejs-vector3-clamp - edit and expand loop section
 * (done) videoground r7 - LF to CRLF EOL conversion on save
 * (done) forpost: threejs-examples-tracks - start work on r1
-
-* () r146 prototype: examples-camera-planes - finish up the prototype
-* () forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
-
-
 
 ### () - TUE 03/07/2023
 * (done) edit: threejs-vector3-normalize - proof read opening and getting started
