--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -37,15 +37,14 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () edit: threejs-vector3-distance-to
 
 ### () - THU 03/09/2023
-<!-- forpost/edit -->
-* () forpost: threejs-vector3-wrap - rename folders
-* () forpost: threejs-vector3-wrap - update to r146 style
-* () forpost: threejs-vector3-wrap - new loop section example
-* () videoground-blog-posts: have a video2 for threejs-vector3-wrap 
-* () edit: threejs-vector3-wrap - proof read opening and getting started
-* () edit: threejs-vector3-wrap - update all code examples to current r146 style
-* () edit: threejs-vector3-wrap - expand loop section with new demo
-* () edit: threejs-vector3-wrap - embed video2
+* (done) forpost: threejs-vector3-wrap - rename folders
+* (done) forpost: threejs-vector3-wrap - update to r146 style
+* (done) forpost: threejs-vector3-wrap - new loop section example
+* (done) videoground-blog-posts: have a video2 for threejs-vector3-wrap 
+* (done) edit: threejs-vector3-wrap - proof read opening and getting started
+* (done) edit: threejs-vector3-wrap - update all code examples to current r146 style
+* (done) edit: threejs-vector3-wrap - expand loop section with new demo
+* (done) edit: threejs-vector3-wrap - embed video2
 <!-- forpost/new -->
 * () r146 prototype: examples-camera-planes - finish up the prototype
 * () forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
