todo update for 03/10/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -33,7 +33,7 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * () videoground r7 - readme and final 0.7.0 commit
 
 ### () - FRI 03/10/2023
-* () start post #1031 on threejs-examples-camera-planes
+* (done) start post #1031 on threejs-examples-camera-planes
 * () edit: threejs-vector3-distance-to
 
 ### () - THU 03/09/2023
@@ -45,11 +45,8 @@ I would like to finish 'breathing basic' and while doing so start some prototype
 * (done) edit: threejs-vector3-wrap - update all code examples to current r146 style
 * (done) edit: threejs-vector3-wrap - expand loop section with new demo
 * (done) edit: threejs-vector3-wrap - embed video2
-<!-- forpost/new -->
-* () r146 prototype: examples-camera-planes - finish up the prototype
-* () forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
-<!-- TRACKS -->
-* () forpost: threejs-examples-tracks - work on r1
+* (done) r146 prototype: examples-camera-planes - finish up the prototype
+* (done) forpost: start a threejs-examples-camera-planes folder with the source code of the r146 prototype
 
 ### () - WED 03/08/2023
 * (done) forpost: threejs-vector3-clamp - rename folders
