--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -8,18 +8,34 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () update youtube github video links from threejs-ambient-light
 
 <!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 03/19/2023 - SAT 03/25/2023
+
+This week I would like to work on my tracks module. I think it will be a pretty cool project if I can just improve the quality of the code a little. So I will be making that the top item each day this week, and maybe event for the rest of the month if need be. After that I have some ideas for protoypes that might apply to what I want to do with tracks, as well as other future projects.
+
+<!-------- ----------
 -- WEEK 3
 ---------- --------->
 ## () - WEEK 3 - SUN 03/12/2023 - SAT 03/18/2023
 
-This week I would like to work on my tracks module. I think it will be a pretty cool project if I can just improve the quality of the code a little. So I will be making that the top item each day this week, and maybe event for the rest of the month if need be. After that I have some ideas for protoypes that might apply to what I want to do with tracks, as well as other future projects.
+This week I would like to work on logo design, as well as any tools that prove to be relavant to doing so. I will be starting out by making my own logo, but in time I think I will also want to be able to do this sort of thing for clients as well of course.
 
-### () - SUN 03/12/2023
+### () - MON 03/13/2023
+<!-- EDIT -->
+* () edit: threejs-vector3-distance-to
+
+<!-- videoground R7 -->
+* () videoground r7 - asterisk in title when there are unsaved changes
+* () videoground r7 - readme and final 0.7.0 commit
 <!-- forpost/ tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 
-* () r146 prototype: examples-alpha-module -
-* () r146 prototype: examples-timeline -
+### () - SUN 03/12/2023
+<!-- NEW POST PROTOTYPES -->
+* () r146 prototype: examples-svg-tools - start a protoype that is a collection of tools for loading and using svg files
+* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
+* () r146 prototype: examples-timeline - display current state tools
 
 <!-------- ----------
 -- WEEK 2
@@ -29,12 +45,10 @@ This week I would like to work on my tracks module. I think it will be a pretty 
 I would like to finish 'breathing basic' and while doing so start some prototypes for projects that I will be using with this video as well as future projects based off of it. I have two general ideas for additional threes example projects one has to do with having one or more planes positioned in front of the camera, and the other has to do with alpha values. I currently have alpha methods baked into my curve and sequence hook modules, but I think that I should just have these in there own module and remove this from future revisions of those projects.
 
 ### () - SAT 03/11/2023
-* () videoground r7 - asterisk in title when there are unsaved changes
-* () videoground r7 - readme and final 0.7.0 commit
+* (done) videoground-beta-world - work on new svg template
 
 ### () - FRI 03/10/2023
 * (done) start post #1031 on threejs-examples-camera-planes
-* () edit: threejs-vector3-distance-to
 
 ### () - THU 03/09/2023
 * (done) forpost: threejs-vector3-wrap - rename folders
