todo update for 03/13/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -7,6 +7,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+
 <!-------- ----------
 -- WEEK 4
 ---------- --------->
@@ -14,28 +15,45 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 This week I would like to work on my tracks module. I think it will be a pretty cool project if I can just improve the quality of the code a little. So I will be making that the top item each day this week, and maybe event for the rest of the month if need be. After that I have some ideas for protoypes that might apply to what I want to do with tracks, as well as other future projects.
 
+<!-- forpost/ tracks r1 and demos -->
+* () forpost: threejs-examples-tracks - work on R1 of the module.
+
 <!-------- ----------
 -- WEEK 3
 ---------- --------->
 ## () - WEEK 3 - SUN 03/12/2023 - SAT 03/18/2023
 
-This week I would like to work on logo design, as well as any tools that prove to be relavant to doing so. I will be starting out by making my own logo, but in time I think I will also want to be able to do this sort of thing for clients as well of course.
+This week I would like to work on logo design, as well as any related tools.
+
+### () - SAT 03/18/2023
+
+### () - FRI 03/17/2023
+* () start post #1032 on threejs-examples-svg-tools
+
+### () - THU 03/16/2023
+
+### () - WED 03/15/2023
+
+### () - TUE 03/14/2023
 
 ### () - MON 03/13/2023
 <!-- EDIT -->
-* () edit: threejs-vector3-distance-to
-
+* () edit: threejs-vector3-distance-to - proof read opening and getting started
+<!-- r146 prototype: examples-svg-tools -->
+* () use svg fill color to set color option of material used
+* () see about using custom attributes for mapping what the svg color should be for a material
+* () finish my logo
 <!-- videoground R7 -->
 * () videoground r7 - asterisk in title when there are unsaved changes
 * () videoground r7 - readme and final 0.7.0 commit
-<!-- forpost/ tracks r1 and demos -->
-* () forpost: threejs-examples-tracks - work on R1 of the module.
 
-### () - SUN 03/12/2023
 <!-- NEW POST PROTOTYPES -->
-* () r146 prototype: examples-svg-tools - start a protoype that is a collection of tools for loading and using svg files
 * () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
 * () r146 prototype: examples-timeline - display current state tools
+
+
+### () - SUN 03/12/2023
+* (done) r146 prototype: examples-svg-tools - start a prototype that is a collection of tools for loading and using svg files
 
 <!-------- ----------
 -- WEEK 2
