--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -35,6 +35,17 @@ This week I would like to work on logo design, as well as any related tools.
 ### () - WED 03/15/2023
 
 ### () - TUE 03/14/2023
+<!-- EDIT -->
+* () edit: 
+<!-- r146 prototype: examples-svg-tools -->
+<!-- videoground-blog-posts -->
+<!-- videoground-beta-world -->
+
+<!-- videoground R7 -->
+* () videoground r7 - asterisk in title when there are unsaved changes
+* () videoground r7 - readme and final 0.7.0 commit
+
+<!-- NEW POST PROTOTYPES -->
 
 ### () - MON 03/13/2023
 <!-- EDIT -->
@@ -43,9 +54,10 @@ This week I would like to work on logo design, as well as any related tools.
 * () use svg fill color to set color option of material used
 * () see about using custom attributes for mapping what the svg color should be for a material
 * () finish my logo
-<!-- videoground R7 -->
-* () videoground r7 - asterisk in title when there are unsaved changes
-* () videoground r7 - readme and final 0.7.0 commit
+<!-- videoground-blog-posts -->
+
+<!-- videoground-beta-world -->
+
 
 <!-- NEW POST PROTOTYPES -->
 * () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
