--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -48,19 +48,16 @@ This week I would like to work on logo design, as well as any related tools.
 <!-- NEW POST PROTOTYPES -->
 
 ### () - MON 03/13/2023
-<!-- FORPOST/EDIT -->
 * (done) edit: threejs-vector3-distance-to - proof read opening and getting started
-* () fprpost: threejs-vector3-distance-to - rename folders, update demos to r146
-* () forpost: threejs-vector3-distance-to - new basic example on length
+* (done) fprpost: threejs-vector3-distance-to - rename folders, update demos to r146
+* (done) forpost: threejs-vector3-distance-to - new basic example on length
+* (done) see about video2 for threejs-vector3-distance-to
 <!-- r146 prototype: examples-svg-tools -->
 * () use svg fill color to set color option of material used
 * () see about using custom attributes for mapping what the svg color should be for a material
 * () finish my logo
-<!-- videoground-blog-posts -->
-* () see about video2 for threejs-vector3-distance-to
 <!-- videoground-beta-world -->
-
-
+* () work on new final video for breathing-basic
 <!-- NEW POST PROTOTYPES -->
 * () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
 * () r146 prototype: examples-timeline - display current state tools
