todo update for 03/14/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -28,39 +28,46 @@ This week I would like to work on logo design, as well as any related tools.
 ### () - SAT 03/18/2023
 
 ### () - FRI 03/17/2023
+<!-- forpost/new -->
 * () start post #1032 on threejs-examples-svg-tools
+<!-- forpost/edit -->
+* () edit: threejs-mesh-material-index - proof read opening and getting started
 
 ### () - THU 03/16/2023
+<!-- forpost/edit -->
+* () edit: threejs-grid-helper - proof read opening and getting started
 
 ### () - WED 03/15/2023
+<!-- forpost/edit -->
+* () edit: threejs-math-utils - proof read opening and getting started
 
 ### () - TUE 03/14/2023
-<!-- EDIT -->
-* () edit: 
+<!-- forpost/edit -->
+* () edit: threejs-vector3-multiply-scalar - proof read opening and getting started
 <!-- r146 prototype: examples-svg-tools -->
+* () use svg fill color to set color option of material used
+* () see about using custom attributes for mapping what the svg color should be for a material
+<!-- forpost/new -->
+* () forpost: threejs-examples-svg-tools - start for post folder with source code from r146 demo
+<!-- videoground-clients -->
+* () work on current client porject
 <!-- videoground-blog-posts -->
+* () videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
 <!-- videoground-beta-world -->
-
+* () videoground-beta-world: work on new final video for breathing-basic
 <!-- videoground R7 -->
 * () videoground r7 - asterisk in title when there are unsaved changes
 * () videoground r7 - readme and final 0.7.0 commit
-
 <!-- NEW POST PROTOTYPES -->
+* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
+* () r146 prototype: examples-timeline - display current state tools
 
 ### () - MON 03/13/2023
 * (done) edit: threejs-vector3-distance-to - proof read opening and getting started
 * (done) fprpost: threejs-vector3-distance-to - rename folders, update demos to r146
 * (done) forpost: threejs-vector3-distance-to - new basic example on length
 * (done) see about video2 for threejs-vector3-distance-to
-<!-- r146 prototype: examples-svg-tools -->
-* () use svg fill color to set color option of material used
-* () see about using custom attributes for mapping what the svg color should be for a material
-* () finish my logo
-<!-- videoground-beta-world -->
-* () work on new final video for breathing-basic
-<!-- NEW POST PROTOTYPES -->
-* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
-* () r146 prototype: examples-timeline - display current state tools
+
 
 
 ### () - SUN 03/12/2023
