post-check;id#: 971;v: 1.25;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -43,7 +43,7 @@ This week I would like to work on logo design, as well as any related tools.
 
 ### () - TUE 03/14/2023
 <!-- forpost/edit -->
-* () edit: threejs-vector3-multiply-scalar - proof read opening and getting started
+* (done) edit: threejs-vector3-multiply-scalar - proof read opening and getting started
 <!-- r146 prototype: examples-svg-tools -->
 * () use svg fill color to set color option of material used
 * () see about using custom attributes for mapping what the svg color should be for a material
