--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -34,6 +34,8 @@ This week I would like to work on logo design, as well as any related tools.
 * () edit: threejs-mesh-material-index - proof read opening and getting started
 
 ### () - THU 03/16/2023
+<!-- blog_posts npm script -->
+* () start an npm script replacement for the main gruntfile 
 <!-- forpost/edit -->
 * () edit: threejs-grid-helper - proof read opening and getting started
 
