--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -44,11 +44,8 @@ This week I would like to work on logo design, as well as any related tools.
 * () edit: threejs-math-utils - proof read opening and getting started
 
 ### () - TUE 03/14/2023
-<!-- forpost/edit -->
 * (done) edit: threejs-vector3-multiply-scalar - proof read opening and getting started
-<!-- r146 prototype: examples-svg-tools -->
-* () use svg fill color to set color option of material used
-* () see about using custom attributes for mapping what the svg color should be for a material
+* (done) use svg fill color to set color option of material used
 <!-- forpost/new -->
 * () forpost: threejs-examples-svg-tools - start for post folder with source code from r146 demo
 <!-- videoground-clients -->
