todo update for 03/14/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -46,10 +46,9 @@ This week I would like to work on logo design, as well as any related tools.
 ### () - TUE 03/14/2023
 * (done) edit: threejs-vector3-multiply-scalar - proof read opening and getting started
 * (done) use svg fill color to set color option of material used
-<!-- forpost/new -->
-* () forpost: threejs-examples-svg-tools - start for post folder with source code from r146 demo
+* (done) forpost: threejs-examples-svg-tools - start for post folder with source code from r146 demo
 <!-- videoground-clients -->
-* () work on current client porject
+* () work on current client project
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
 <!-- videoground-beta-world -->
