--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -40,17 +40,15 @@ This week I would like to work on logo design, as well as any related tools.
 * () edit: threejs-grid-helper - proof read opening and getting started
 
 ### () - WED 03/15/2023
-<!-- forpost/edit -->
-* () edit: threejs-math-utils - proof read opening and getting started
-
-### () - TUE 03/14/2023
-* (done) edit: threejs-vector3-multiply-scalar - proof read opening and getting started
-* (done) use svg fill color to set color option of material used
-* (done) forpost: threejs-examples-svg-tools - start for post folder with source code from r146 demo
-<!-- videoground-clients -->
-* () work on current client project
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
+<!-- forpost/edit -->
+* () edit: threejs-math-utils - proof read opening and getting started
+* () forpost: threejs-math-utils - update to r146
+<!-- videoground-clients -->
+* () work on client project
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video2 for threejs-math-utils
 <!-- videoground-beta-world -->
 * () videoground-beta-world: work on new final video for breathing-basic
 <!-- videoground R7 -->
@@ -59,6 +57,12 @@ This week I would like to work on logo design, as well as any related tools.
 <!-- NEW POST PROTOTYPES -->
 * () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
 * () r146 prototype: examples-timeline - display current state tools
+
+### () - TUE 03/14/2023
+* (done) edit: threejs-vector3-multiply-scalar - proof read opening and getting started
+* (done) use svg fill color to set color option of material used
+* (done) forpost: threejs-examples-svg-tools - start for post folder with source code from r146 demo
+* (done) work on current client project
 
 ### () - MON 03/13/2023
 * (done) edit: threejs-vector3-distance-to - proof read opening and getting started
