--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -40,8 +40,7 @@ This week I would like to work on logo design, as well as any related tools.
 * () edit: threejs-grid-helper - proof read opening and getting started
 
 ### () - WED 03/15/2023
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
+* (done) videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
 <!-- forpost/edit -->
 * () edit: threejs-math-utils - proof read opening and getting started
 * () forpost: threejs-math-utils - update to r146
