post-check;id#: 977;v: 1.29;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -42,12 +42,15 @@ This week I would like to work on logo design, as well as any related tools.
 ### () - WED 03/15/2023
 * (done) videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
 <!-- forpost/edit -->
-* () edit: threejs-math-utils - proof read opening and getting started
-* () forpost: threejs-math-utils - update to r146
+* (done) edit: threejs-math-utils - proof read opening and getting started
+* (done) forpost: threejs-math-utils - update to r146
+* () forpost: threejs-math-utils - new s6 demo on the lerp method
+* () edit: threejs-math-utils - write about new s6 lerp demo
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video2 for threejs-math-utils based on the s6 lerp demo
+* () edit: threejs-math-utils - embed video
 <!-- videoground-clients -->
 * () work on client project
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video2 for threejs-math-utils
 <!-- videoground-beta-world -->
 * () videoground-beta-world: work on new final video for breathing-basic
 <!-- videoground R7 -->
