post-check;id#: 977;v: 1.30;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -44,8 +44,8 @@ This week I would like to work on logo design, as well as any related tools.
 <!-- forpost/edit -->
 * (done) edit: threejs-math-utils - proof read opening and getting started
 * (done) forpost: threejs-math-utils - update to r146
-* () forpost: threejs-math-utils - new s6 demo on the lerp method
-* () edit: threejs-math-utils - write about new s6 lerp demo
+* (done) forpost: threejs-math-utils - new s6 demo on the lerp method
+* (done) edit: threejs-math-utils - write about new s6 lerp demo
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: video2 for threejs-math-utils based on the s6 lerp demo
 * () edit: threejs-math-utils - embed video
