--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -26,6 +26,17 @@ This week I would like to work on my tracks module. I think it will be a pretty 
 This week I would like to work on logo design, as well as any related tools.
 
 ### () - SAT 03/18/2023
+<!-- videoground-beta-world -->
+* () videoground-beta-world: work on new final video for breathing-basic
+<!-- videoground R7 -->
+* () videoground r7 - asterisk in title when there are unsaved changes
+* () videoground r7 - readme and final 0.7.0 commit
+<!-- NEW POST PROTOTYPES -->
+* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
+* () r146 prototype: examples-timeline - display current state tools
+<!-- blog_posts npm script -->
+* () start an npm script replacement for the main gruntfile 
+
 
 ### () - FRI 03/17/2023
 <!-- forpost/new -->
@@ -34,10 +45,10 @@ This week I would like to work on logo design, as well as any related tools.
 * () edit: threejs-mesh-material-index - proof read opening and getting started
 
 ### () - THU 03/16/2023
-<!-- blog_posts npm script -->
-* () start an npm script replacement for the main gruntfile 
 <!-- forpost/edit -->
 * () edit: threejs-grid-helper - proof read opening and getting started
+<!-- videoground-clients -->
+* () work on client project
 
 ### () - WED 03/15/2023
 * (done) videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
@@ -47,16 +58,7 @@ This week I would like to work on logo design, as well as any related tools.
 * (done) edit: threejs-math-utils - write about new s6 lerp demo
 * (done) videoground-blog-posts: video2 for threejs-math-utils based on the s6 lerp demo
 * (done) edit: threejs-math-utils - embed video
-<!-- videoground-clients -->
-* () work on client project
-<!-- videoground-beta-world -->
-* () videoground-beta-world: work on new final video for breathing-basic
-<!-- videoground R7 -->
-* () videoground r7 - asterisk in title when there are unsaved changes
-* () videoground r7 - readme and final 0.7.0 commit
-<!-- NEW POST PROTOTYPES -->
-* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
-* () r146 prototype: examples-timeline - display current state tools
+* (done) work on client project
 
 ### () - TUE 03/14/2023
 * (done) edit: threejs-vector3-multiply-scalar - proof read opening and getting started
