post-check;id#: 961;v: 1.30;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -46,7 +46,9 @@ This week I would like to work on logo design, as well as any related tools.
 
 ### () - THU 03/16/2023
 <!-- forpost/edit -->
-* () edit: threejs-grid-helper - proof read opening and getting started
+* (done) edit: threejs-grid-helper - proof read opening and getting started
+* (done) forpost: threejs-grid-helper - update demos to r146 style
+* (done) edit: threejs-grid-helper - update examples in post, some addtional editing for all sections
 <!-- videoground-clients -->
 * () work on client project
 
