post-check;id#: 1032;v: 1.0;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -26,10 +26,7 @@ This week I would like to work on my tracks module. I think it will be a pretty 
 This week I would like to work on logo design, as well as any related tools.
 
 ### () - SAT 03/18/2023
-<!-- videoground-beta-world -->
-* () videoground-beta-world: work on new final video for breathing-basic
 <!-- videoground R7 -->
-* () videoground r7 - asterisk in title when there are unsaved changes
 * () videoground r7 - readme and final 0.7.0 commit
 <!-- NEW POST PROTOTYPES -->
 * () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
@@ -40,17 +37,21 @@ This week I would like to work on logo design, as well as any related tools.
 
 ### () - FRI 03/17/2023
 <!-- forpost/new -->
-* () start post #1032 on threejs-examples-svg-tools
+* () start post #1032 on threejs-examples-svg-tools just write about what there is do far
 <!-- forpost/edit -->
 * () edit: threejs-mesh-material-index - proof read opening and getting started
+<!-- videoground/content -->
+* () videoground-blog-posts: 
+* () videoground-beta-world: start next video for breathing basic
+* () videoground-clients: see todo
 
 ### () - THU 03/16/2023
 <!-- forpost/edit -->
 * (done) edit: threejs-grid-helper - proof read opening and getting started
 * (done) forpost: threejs-grid-helper - update demos to r146 style
 * (done) edit: threejs-grid-helper - update examples in post, some addtional editing for all sections
-<!-- videoground-clients -->
-* () work on client project
+* (done) videoground r7 - asterisk in title when there are unsaved changes
+* (done) work on client project
 
 ### () - WED 03/15/2023
 * (done) videoground-blog-posts: video2 for threejs-vector3-multiply-scalar
