post-check;id#: 187;v: 1.37;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -36,10 +36,8 @@ This week I would like to work on logo design, as well as any related tools.
 
 
 ### () - FRI 03/17/2023
-<!-- forpost/new -->
-* () start post #1032 on threejs-examples-svg-tools just write about what there is do far
-<!-- forpost/edit -->
-* () edit: threejs-mesh-material-index - proof read opening and getting started
+* (done) start post #1032 on threejs-examples-svg-tools just write about what there is do far
+* (done) edit: threejs-mesh-material-index - proof read opening and getting started
 <!-- videoground/content -->
 * () videoground-blog-posts: 
 * () videoground-beta-world: start next video for breathing basic
