--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -13,10 +13,36 @@ I would like to focus on my beta world content first and formost. When doing so 
 ---------- --------->
 ## () - WEEK 4 - SUN 03/19/2023 - SAT 03/25/2023
 
-This week I would like to work on my tracks module. I think it will be a pretty cool project if I can just improve the quality of the code a little. So I will be making that the top item each day this week, and maybe event for the rest of the month if need be. After that I have some ideas for protoypes that might apply to what I want to do with tracks, as well as other future projects.
+### () - SAT 03/25/2023
+* () start post #1033 on threejs-
 
-<!-- forpost/ tracks r1 and demos -->
+### () - FRI 03/24/2023
+
+### () - THU 03/23/2023
+
+### () - WED 03/22/2023
+
+### () - TUE 03/21/2023
+
+### () - MON 03/20/2023
+
+### () - SUN 03/19/2023
+<!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
+<!-- prototypes -->
+* () r146 prototype: animation-vector-keyframe-track - ?
+* () r146 prototype: animation-clip -
+* () r146 prototype: animation-mixer -
+* () r146 prototype: materials-depth-func -
+* () r146 prototype: materials-side -
+* () r146 prototype: materials-blending -
+* () r146 prototype: quaternion - 
+* () r146 prototype: euler-set-from-quaternion -
+* () r146 prototype: object3d-remove
+* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
+* () r146 prototype: examples-timeline - display current state tools
+<!-- blog_posts npm script -->
+* () start an npm script replacement for the main gruntfile 
 
 <!-------- ----------
 -- WEEK 3
@@ -26,22 +52,18 @@ This week I would like to work on my tracks module. I think it will be a pretty 
 This week I would like to work on logo design, as well as any related tools.
 
 ### () - SAT 03/18/2023
+<!-- prototypes -->
+* () r146 prototype: animation-vector-keyframe-track - start a prototype for this
 <!-- videoground R7 -->
 * () videoground r7 - readme and final 0.7.0 commit
-<!-- NEW POST PROTOTYPES -->
-* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
-* () r146 prototype: examples-timeline - display current state tools
-<!-- blog_posts npm script -->
-* () start an npm script replacement for the main gruntfile 
-
+<!-- videoground content -->
+* () videoground-beta-world - work on breathing-basic
 
 ### () - FRI 03/17/2023
 * (done) start post #1032 on threejs-examples-svg-tools just write about what there is do far
 * (done) edit: threejs-mesh-material-index - proof read opening and getting started
-<!-- videoground/content -->
-* () videoground-blog-posts: 
-* () videoground-beta-world: start next video for breathing basic
-* () videoground-clients: see todo
+* (done) videoground-blog-posts: 
+* (done) videoground-beta-world: start next video for breathing basic
 
 ### () - THU 03/16/2023
 <!-- forpost/edit -->
