--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -30,13 +30,15 @@ I would like to focus on my beta world content first and formost. When doing so 
 <!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- prototypes -->
-* () r146 prototype: animation-vector-keyframe-track - ?
+* () r146 prototype: animation-vector-keyframe-track - Have a good hello world done, might start a post with this.
+* () r146 prototype: quaternion - 
+* () r146 prototype: animation-quaternion-keyframe-track -
 * () r146 prototype: animation-clip -
 * () r146 prototype: animation-mixer -
 * () r146 prototype: materials-depth-func -
 * () r146 prototype: materials-side -
 * () r146 prototype: materials-blending -
-* () r146 prototype: quaternion - 
+
 * () r146 prototype: euler-set-from-quaternion -
 * () r146 prototype: object3d-remove
 * () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
@@ -52,8 +54,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 This week I would like to work on logo design, as well as any related tools.
 
 ### () - SAT 03/18/2023
-<!-- prototypes -->
-* () r146 prototype: animation-vector-keyframe-track - start a prototype for this
+* (done) r146 prototype: animation-vector-keyframe-track - start a prototype for this
 <!-- videoground R7 -->
 * () videoground r7 - readme and final 0.7.0 commit
 <!-- videoground content -->
