todo update for 03/19/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -7,6 +7,12 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+<!-------- ----------
+-- WEEK 5
+---------- --------->
+
+<!-- forpost/tracks r1 and demos -->
+* () forpost: threejs-examples-tracks - work on R1 of the module.
 
 <!-------- ----------
 -- WEEK 4
@@ -25,10 +31,16 @@ I would like to focus on my beta world content first and formost. When doing so 
 ### () - TUE 03/21/2023
 
 ### () - MON 03/20/2023
+<!-- videoground R7 -->
+* (done) videoground r8 - new start video of R8
 
 ### () - SUN 03/19/2023
-<!-- forpost/tracks r1 and demos -->
-* () forpost: threejs-examples-tracks - work on R1 of the module.
+<!-- videoground R7 -->
+* (done) videoground r7 - readme and final 0.7.0 commit
+<!-- videoground content -->
+* () videoground-beta-world - work on breathing-basic
+
+
 <!-- prototypes -->
 * () r146 prototype: animation-vector-keyframe-track - Have a good hello world done, might start a post with this.
 * () r146 prototype: quaternion - 
@@ -55,10 +67,6 @@ This week I would like to work on logo design, as well as any related tools.
 
 ### () - SAT 03/18/2023
 * (done) r146 prototype: animation-vector-keyframe-track - start a prototype for this
-<!-- videoground R7 -->
-* () videoground r7 - readme and final 0.7.0 commit
-<!-- videoground content -->
-* () videoground-beta-world - work on breathing-basic
 
 ### () - FRI 03/17/2023
 * (done) start post #1032 on threejs-examples-svg-tools just write about what there is do far
