--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -7,42 +7,10 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
-<!-------- ----------
--- WEEK 5
----------- --------->
-
-<!-- forpost/tracks r1 and demos -->
-* () forpost: threejs-examples-tracks - work on R1 of the module.
-
-<!-------- ----------
--- WEEK 4
----------- --------->
-## () - WEEK 4 - SUN 03/19/2023 - SAT 03/25/2023
-
-### () - SAT 03/25/2023
-* () start post #1033 on threejs-
-
-### () - FRI 03/24/2023
-
-### () - THU 03/23/2023
-
-### () - WED 03/22/2023
-
-### () - TUE 03/21/2023
-
-### () - MON 03/20/2023
-<!-- videoground R7 -->
-* (done) videoground r8 - new start video of R8
-
-### () - SUN 03/19/2023
-<!-- videoground R7 -->
-* (done) videoground r7 - readme and final 0.7.0 commit
-<!-- videoground content -->
-* () videoground-beta-world - work on breathing-basic
-
-
-<!-- prototypes -->
+## PROTOTYPES
 * () r146 prototype: animation-vector-keyframe-track - Have a good hello world done, might start a post with this.
+* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
+* () r146 prototype: examples-timeline - display current state tools
 * () r146 prototype: quaternion - 
 * () r146 prototype: animation-quaternion-keyframe-track -
 * () r146 prototype: animation-clip -
@@ -50,13 +18,58 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () r146 prototype: materials-depth-func -
 * () r146 prototype: materials-side -
 * () r146 prototype: materials-blending -
-
 * () r146 prototype: euler-set-from-quaternion -
 * () r146 prototype: object3d-remove
-* () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
-* () r146 prototype: examples-timeline - display current state tools
+
+
+
+<!-------- ----------
+-- WEEK 5
+---------- --------->
+
+<!-- forpost/tracks r1 and demos -->
+* () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- blog_posts npm script -->
 * () start an npm script replacement for the main gruntfile 
+
+<!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 03/19/2023 - SAT 03/25/2023
+
+### () - SAT 03/25/2023
+
+
+### () - FRI 03/24/2023
+<!-- forpost/new -->
+* () start post #1033 on threejs-
+<!-- forpost/edit -->
+* () edit: threejs-vector3-apply-euler
+
+### () - THU 03/23/2023
+<!-- forpost/edit -->
+* () edit: threejs-cube-texture -
+
+### () - WED 03/22/2023
+<!-- forpost/edit -->
+* () edit: threejs-torus -
+
+### () - TUE 03/21/2023
+<!-- forpost/edit -->
+* () edit: threejs-scene -
+
+### () - MON 03/20/2023
+<!-- forpost/edit -->
+* () edit: threejs-normal-material -
+<!-- videoground content -->
+* () videoground-beta-world - work on breathing-basic
+* () videoground-blog-posts - 
+<!-- videoground R8 -->
+* (done) videoground r8 - new start video for R8
+
+
+### () - SUN 03/19/2023
+* (done) videoground r7 - readme and final 0.7.0 commit
 
 <!-------- ----------
 -- WEEK 3
