--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -57,16 +57,17 @@ I would like to focus on my beta world content first and formost. When doing so 
 ### () - TUE 03/21/2023
 <!-- forpost/edit -->
 * () edit: threejs-scene -
+<!-- videoground R8 -->
+* () videoground r8 - 
 
 ### () - MON 03/20/2023
-<!-- forpost/edit -->
-* () edit: threejs-normal-material -
-<!-- videoground content -->
-* () videoground-beta-world - work on breathing-basic
-* () videoground-blog-posts - 
 <!-- videoground R8 -->
 * (done) videoground r8 - new start video for R8
-
+* (done) videoground r8 - frame render range feature working
+* (done) edit: threejs-normal-material - edited opening, getting started
+<!-- videoground content -->
+* () videoground-blog-posts - threejs-normal-material - video2 
+* () videoground-beta-world - work on breathing-basic
 
 ### () - SUN 03/19/2023
 * (done) videoground r7 - readme and final 0.7.0 commit
