todo update for 03/21/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -56,18 +56,22 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - TUE 03/21/2023
 <!-- forpost/edit -->
-* () edit: threejs-scene -
+* () edit: threejs-scene - edit opening and getting started
+* () forpost: threejs-scene - check state of demos
+<!-- videoground-content -->
+* () videoground-blog-posts - video2 for threejs-scene
+* () videoground-beta-world
+<!-- forpost/new -->
+* () start a quaternion r146 prototype
 <!-- videoground R8 -->
 * () videoground r8 - 
 
 ### () - MON 03/20/2023
-<!-- videoground R8 -->
 * (done) videoground r8 - new start video for R8
 * (done) videoground r8 - frame render range feature working
 * (done) edit: threejs-normal-material - edited opening, getting started
-<!-- videoground content -->
-* () videoground-blog-posts - threejs-normal-material - video2 
-* () videoground-beta-world - work on breathing-basic
+* (done) videoground-blog-posts - threejs-normal-material - video2 
+* (done) videoground-beta-world - work on breathing-basic video4-message.js
 
 ### () - SUN 03/19/2023
 * (done) videoground r7 - readme and final 0.7.0 commit
@@ -117,8 +121,6 @@ This week I would like to work on logo design, as well as any related tools.
 * (done) fprpost: threejs-vector3-distance-to - rename folders, update demos to r146
 * (done) forpost: threejs-vector3-distance-to - new basic example on length
 * (done) see about video2 for threejs-vector3-distance-to
-
-
 
 ### () - SUN 03/12/2023
 * (done) r146 prototype: examples-svg-tools - start a prototype that is a collection of tools for loading and using svg files
